# ResearchApp

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_ideas_projects_tasks.py  003_documents_knowledge.py  004_collaboration_activities.py  005_rename_metadata_to_extra_data.py  006_ai_models.py  007_review_workflow.py  008_add_document_collab_columns.py  009_multi_user_collaboration.py  010_add_missing_paper_columns.py  011_add_missing_collection_columns.py  012_add_timestamps_to_collection_papers.py  013_update_paper_links_to_polymorphic.py  014_add_comment_reactions.py  015_task_description_jsonb.py  016_add_comment_mentions.py  017_ai_review_comments.py  018_add_journal_tables.py  019_auto_review_config.py  020_add_blocker_tables.py  021_project_access_control.py  022_fix_project_teams_columns.py  023_invite_codes_and_team_roles.py  024_document_comment_mentions.py  025_add_google_oauth.py  026_fix_task_descriptions.py  027_add_idea_votes.py  028_add_comment_reads.py  029_add_task_source_idea.py  030_add_demo_project_flag.py  031_add_project_emoji.py  032_add_ai_pending_actions.py  033_add_system_docs_flag.py  034_add_pending_action_user_org.py  035_rename_ai_metadata_to_extra_data.py  036_increase_avatar_url_size.py  037_settings_cleanup.py  038_add_pending_action_content_hash.py  039_add_pgvector_embeddings.py  040_add_performance_indexes.py  (+3 more)
backend/researchhub/: __init__.py  config.py  main.py  tasks.py  worker.py
backend/researchhub/ai/: __init__.py  exceptions.py  phi_detector.py  schemas.py  service.py  templates.py
backend/researchhub/api/: __init__.py
backend/researchhub/db/: __init__.py  base.py  session.py
backend/researchhub/middleware/: __init__.py  logging.py  request_id.py
backend/researchhub/models/: __init__.py  activity.py  ai.py  collaboration.py  document.py  idea.py  journal.py  knowledge.py  organization.py  project.py  review.py  user.py
backend/researchhub/scripts/: __init__.py  seed_demo_project.py  sync_system_docs.py
backend/researchhub/services/: __init__.py  access_control.py  auto_review.py  azure_ad.py  custom_field.py  embedding.py  external_apis.py  google_oauth.py  notification.py  pdf_generator.py  recurring_task.py  review.py  task_assignment.py  task_document.py  workflow.py
docs/: AI_ASSISTANT.md  (+10 more)
(+291 files in other folders)
